# social-app-rust

./: .env.example  .gitignore  Cargo.toml  Makefile  bacon.toml  compose-test.yml  compose.yml
internal/app_error/: Cargo.toml
internal/app_error/src/: lib.rs
internal/auth/: Cargo.toml
internal/auth/src/: auth_service.rs  auth_utils.rs  errors.rs  jwt.rs  lib.rs  magic_link.rs  otp.rs  result.rs
internal/auth/src/otp/: mongoimpl.rs  otp_respository.rs  repository.rs
internal/infra/: Cargo.toml
internal/infra/src/: config.rs  guards_impl.rs  lib.rs  storage.rs
internal/infra/src/guards_impl/: abac.rs  policy.rs  rbac.rs
internal/infra/src/storage/: mongo_storage.rs
internal/ports/: Cargo.toml
internal/ports/src/: app_service.rs  graphql.rs  lib.rs
internal/ports/src/graphql/: user.rs
internal/ports/src/graphql/user/: user_mutation.rs  user_query.rs
internal/services/: Cargo.toml
internal/services/src/: lib.rs  storage.rs
internal/services/src/storage/: mongo_storage.rs
internal/shared/: Cargo.toml
internal/shared/src/: auth.rs  command_handler.rs  config.rs  db_transactions.rs  errors.rs  guards.rs  lib.rs  pagination.rs  query_handler.rs  storage.rs  test_utils.rs  types.rs
internal/shared/src/errors/: app.rs  auth.rs  content.rs  user.rs
internal/shared/src/guards/: abac.rs  rbac.rs
internal/shared/src/guards/rbac/: permissions.rs  policy.rs  roles.rs
internal/shared/src/types/: graphql_scalars.rs  non_empty_string.rs
internal/user/: Cargo.toml
internal/user/src/: app.rs  domain.rs  guards.rs  infra.rs  lib.rs  utils.rs
internal/user/src/app/: command.rs  query.rs  user_service.rs
internal/user/src/app/command/: award_badge.rs  ban_user.rs  change_username.rs  create_account.rs  make_moderator.rs  revoke_badge.rs  sign_in.rs  sign_up.rs  unban_user.rs  verify_email_with_otp.rs  verify_otp.rs
internal/user/src/app/query/: user_by_email.rs  user_by_id.rs  users.rs
internal/user/src/domain/: errors.rs  result.rs  user.rs  user_auth.rs  user_read_model.rs  user_read_model_repository.rs  user_repository.rs
internal/user/src/domain/user_auth/: errors.rs  jwt.rs  otp.rs  otp_read_model.rs  result.rs
internal/user/src/infra/: mongoimpl.rs  repository.rs
internal/user/src/infra/mongoimpl/: otp_respository.rs  user_document.rs  user_read_model_repository.rs  user_repository.rs
internal/user/src/infra/repository/: db_transactions.rs  mock_user_repository_trait.rs  otp_repository.rs  otp_repository_trait.rs  user_read_model_repository.rs  user_read_model_repository_trait.rs  user_repository.rs  user_repository_trait.rs
internal/user/src/ports/: graphql.rs
scripts/: init-replica.sh  test_with_mongo.sh
server/: Cargo.toml
server/src/: extractors.rs  graphql.rs  lib.rs  main.rs
