[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
mongodb = "3.2.3"
mockall = "0.13.1"
tokio = { version = "1.45.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.31"
rand = "0.9.1"
bson = { version = "2.14.0", features = ["chrono-0_4"] }
validator = { version = "0.19", features = ["derive"] }
getset = "0.1.5"
sha2 = "0.10.9"
jsonwebtoken = "9.3.1"
tracing = "0.1"
serde_json = "1.0.140"
