[package]
name = "infra"
version = "0.1.0"
edition = "2024"

[dependencies]
user = { path = "../user" }
shared = { path = "../shared" }
auth = { path = "../auth" }
async-trait = "0.1"
mongodb = "3.2.3"
tracing = "0.1"
tokio = { version = "1.45.0", features = ["full"] }
once_cell = "1.21.3"
dotenvy = "0.15"
