[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
async-trait = "0.1"
dotenvy = "0.15"
tracing = "0.1"
mongodb = "3.2.3"
once_cell = "1.21.3"
base64 = "0.22.1"
tokio = { version = "1.45.0", features = ["full"] }
async-graphql = "7.0.16"
validator = { version = "0.19", features = ["derive"] }
jsonwebtoken = "9.3.1"
